# miniwdk

./: CMakeLists.txt
cmake/: miniwdk-config.cmake
